<resources>
    <string name="app_name">HornetInbox</string>

    <string name="profile_image_view">profile image view</string>
    <string name="update">Update</string>
    <string name="inbox">Inbox</string>
    <string name="refresh">Refresh</string>
    <string name="test_time_holder">2 hours ago</string>
    <string name="test_name_holder">Ilija Vucetic</string>
    <string name="test_credentials_holder">IV</string>
    <string name="recent">Recent</string>
    <string name="archived">Archived</string>

    <plurals name="seconds_ago">
        <item quantity="one">%d second ago</item>
        <item quantity="other">%d seconds ago</item>
    </plurals>

    <plurals name="minutes_ago">
        <item quantity="one">%d minute ago</item>
        <item quantity="other">%d minutes ago</item>
    </plurals>

    <plurals name="hours_ago">
        <item quantity="one">%d hour ago</item>
        <item quantity="other">%d hours ago</item>
    </plurals>

    <plurals name="days_ago">
        <item quantity="one">%d day ago</item>
        <item quantity="other">%d days ago</item>
    </plurals>

    <plurals name="weeks_ago">
        <item quantity="one">%d week ago</item>
        <item quantity="other">%d weeks ago</item>
    </plurals>

    <plurals name="months_ago">
        <item quantity="one">%d month ago</item>
        <item quantity="other">%d months ago</item>
    </plurals>

    <plurals name="years_ago">
        <item quantity="one">%d year ago</item>
        <item quantity="other">%d years ago</item>
    </plurals>
</resources>