<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/titleTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/default_view_margin"
            android:text="@string/inbox"
            android:textSize="@dimen/heading_text_size"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toTopOf="@id/inboxViewPager" />

        <Button
            android:id="@+id/refreshInboxButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/refresh_button_margin"
            android:layout_marginTop="@dimen/default_view_margin"
            android:drawableEnd="@drawable/ic_refresh"
            android:text="@string/refresh"
            android:textAllCaps="false"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.viewpager.widget.ViewPager
            android:id="@+id/inboxViewPager"
            android:layout_width="@dimen/match_constraints"
            android:layout_height="@dimen/match_constraints"
            android:layout_marginStart="@dimen/default_view_margin"
            android:layout_marginEnd="@dimen/default_view_margin"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/refreshInboxButton">

            <com.google.android.material.tabs.TabLayout
                android:id="@+id/inboxTabLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </androidx.viewpager.widget.ViewPager>

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/inboxFAB"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/fab_margin"
            android:backgroundTint="@color/purple_200"
            android:contentDescription="@string/update"
            android:src="@drawable/ic_random"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>